--- a/cloud/google_cloud_translate.ipynb
+++ b/cloud/google_cloud_translate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -24,21 +24,21 @@
       "Requirement already up-to-date: google-cloud-translate in c:\\users\\user\\anaconda3\\lib\\site-packages (1.3.3)\n",
       "Requirement already satisfied, skipping upgrade: google-cloud-core<0.30dev,>=0.29.0 in c:\\users\\user\\anaconda3\\lib\\site-packages (from google-cloud-translate) (0.29.1)\n",
       "Requirement already satisfied, skipping upgrade: google-api-core<2.0.0dev,>=1.6.0 in c:\\users\\user\\anaconda3\\lib\\site-packages (from google-cloud-translate) (1.7.0)\n",
+      "Requirement already satisfied, skipping upgrade: pytz in c:\\users\\user\\anaconda3\\lib\\site-packages (from google-api-core<2.0.0dev,>=1.6.0->google-cloud-translate) (2018.7)\n",
       "Requirement already satisfied, skipping upgrade: requests<3.0.0dev,>=2.18.0 in c:\\users\\user\\anaconda3\\lib\\site-packages (from google-api-core<2.0.0dev,>=1.6.0->google-cloud-translate) (2.21.0)\n",
+      "Requirement already satisfied, skipping upgrade: setuptools>=34.0.0 in c:\\users\\user\\anaconda3\\lib\\site-packages (from google-api-core<2.0.0dev,>=1.6.0->google-cloud-translate) (40.6.3)\n",
+      "Requirement already satisfied, skipping upgrade: six>=1.10.0 in c:\\users\\user\\anaconda3\\lib\\site-packages (from google-api-core<2.0.0dev,>=1.6.0->google-cloud-translate) (1.12.0)\n",
       "Requirement already satisfied, skipping upgrade: protobuf>=3.4.0 in c:\\users\\user\\anaconda3\\lib\\site-packages (from google-api-core<2.0.0dev,>=1.6.0->google-cloud-translate) (3.6.1)\n",
       "Requirement already satisfied, skipping upgrade: google-auth<2.0dev,>=0.4.0 in c:\\users\\user\\anaconda3\\lib\\site-packages (from google-api-core<2.0.0dev,>=1.6.0->google-cloud-translate) (1.6.2)\n",
-      "Requirement already satisfied, skipping upgrade: pytz in c:\\users\\user\\anaconda3\\lib\\site-packages (from google-api-core<2.0.0dev,>=1.6.0->google-cloud-translate) (2018.7)\n",
-      "Requirement already satisfied, skipping upgrade: setuptools>=34.0.0 in c:\\users\\user\\anaconda3\\lib\\site-packages (from google-api-core<2.0.0dev,>=1.6.0->google-cloud-translate) (40.6.3)\n",
       "Requirement already satisfied, skipping upgrade: googleapis-common-protos!=1.5.4,<2.0dev,>=1.5.3 in c:\\users\\user\\anaconda3\\lib\\site-packages (from google-api-core<2.0.0dev,>=1.6.0->google-cloud-translate) (1.5.6)\n",
-      "Requirement already satisfied, skipping upgrade: six>=1.10.0 in c:\\users\\user\\anaconda3\\lib\\site-packages (from google-api-core<2.0.0dev,>=1.6.0->google-cloud-translate) (1.12.0)\n",
-      "Requirement already satisfied, skipping upgrade: certifi>=2017.4.17 in c:\\users\\user\\anaconda3\\lib\\site-packages (from requests<3.0.0dev,>=2.18.0->google-api-core<2.0.0dev,>=1.6.0->google-cloud-translate) (2018.11.29)\n",
-      "Requirement already satisfied, skipping upgrade: urllib3<1.25,>=1.21.1 in c:\\users\\user\\anaconda3\\lib\\site-packages (from requests<3.0.0dev,>=2.18.0->google-api-core<2.0.0dev,>=1.6.0->google-cloud-translate) (1.24.1)\n",
-      "Requirement already satisfied, skipping upgrade: idna<2.9,>=2.5 in c:\\users\\user\\anaconda3\\lib\\site-packages (from requests<3.0.0dev,>=2.18.0->google-api-core<2.0.0dev,>=1.6.0->google-cloud-translate) (2.8)\n",
       "Requirement already satisfied, skipping upgrade: chardet<3.1.0,>=3.0.2 in c:\\users\\user\\anaconda3\\lib\\site-packages (from requests<3.0.0dev,>=2.18.0->google-api-core<2.0.0dev,>=1.6.0->google-cloud-translate) (3.0.4)\n",
-      "Requirement already satisfied, skipping upgrade: rsa>=3.1.4 in c:\\users\\user\\anaconda3\\lib\\site-packages (from google-auth<2.0dev,>=0.4.0->google-api-core<2.0.0dev,>=1.6.0->google-cloud-translate) (4.0)\n",
-      "Requirement already satisfied, skipping upgrade: pyasn1-modules>=0.2.1 in c:\\users\\user\\anaconda3\\lib\\site-packages (from google-auth<2.0dev,>=0.4.0->google-api-core<2.0.0dev,>=1.6.0->google-cloud-translate) (0.2.4)\n",
+      "Requirement already satisfied, skipping upgrade: idna<2.9,>=2.5 in c:\\users\\user\\anaconda3\\lib\\site-packages (from requests<3.0.0dev,>=2.18.0->google-api-core<2.0.0dev,>=1.6.0->google-cloud-translate) (2.8)\n",
+      "Requirement already satisfied, skipping upgrade: urllib3<1.25,>=1.21.1 in c:\\users\\user\\anaconda3\\lib\\site-packages (from requests<3.0.0dev,>=2.18.0->google-api-core<2.0.0dev,>=1.6.0->google-cloud-translate) (1.24.1)\n",
+      "Requirement already satisfied, skipping upgrade: certifi>=2017.4.17 in c:\\users\\user\\anaconda3\\lib\\site-packages (from requests<3.0.0dev,>=2.18.0->google-api-core<2.0.0dev,>=1.6.0->google-cloud-translate) (2018.11.29)\n",
       "Requirement already satisfied, skipping upgrade: cachetools>=2.0.0 in c:\\users\\user\\anaconda3\\lib\\site-packages (from google-auth<2.0dev,>=0.4.0->google-api-core<2.0.0dev,>=1.6.0->google-cloud-translate) (3.1.0)\n",
-      "Requirement already satisfied, skipping upgrade: pyasn1>=0.1.3 in c:\\users\\user\\anaconda3\\lib\\site-packages (from rsa>=3.1.4->google-auth<2.0dev,>=0.4.0->google-api-core<2.0.0dev,>=1.6.0->google-cloud-translate) (0.4.5)\n"
+      "Requirement already satisfied, skipping upgrade: pyasn1-modules>=0.2.1 in c:\\users\\user\\anaconda3\\lib\\site-packages (from google-auth<2.0dev,>=0.4.0->google-api-core<2.0.0dev,>=1.6.0->google-cloud-translate) (0.2.4)\n",
+      "Requirement already satisfied, skipping upgrade: rsa>=3.1.4 in c:\\users\\user\\anaconda3\\lib\\site-packages (from google-auth<2.0dev,>=0.4.0->google-api-core<2.0.0dev,>=1.6.0->google-cloud-translate) (4.0)\n",
+      "Requirement already satisfied, skipping upgrade: pyasn1<0.5.0,>=0.4.1 in c:\\users\\user\\anaconda3\\lib\\site-packages (from pyasn1-modules>=0.2.1->google-auth<2.0dev,>=0.4.0->google-api-core<2.0.0dev,>=1.6.0->google-cloud-translate) (0.4.5)\n"
      ]
     }
    ],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -213,15 +213,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BLEU1: 53.443\n",
-      "BLEU4: 27.553\n"
+      "BLEU1: 68.814\n",
+      "BLEU4: 41.181\n"
      ]
     }
    ],
@@ -256,15 +256,26 @@
     "        \n",
     "    trans_file.close()\n",
     "    \n",
-    "# calculate bleu score\n",
+    "# processing for consistency between strings\n",
     "trans_file = codecs.open('./translated.af', 'r')\n",
-    "trans_sents = [line.rstrip('\\n').split(' ') for line in trans_file.readlines()]\n",
+    "trans_sents = [line.rstrip('\\n') for line in trans_file.readlines()]\n",
+    "trans_sents = [re.sub(r'(&gt;)', r' >', line) for line in trans_sents]\n",
+    "trans_sents = [re.sub(r'Ã«', r'ë', line) for line in trans_sents]\n",
+    "trans_sents = [re.sub(r'&#39;', r\"'\", line) for line in trans_sents]\n",
+    "#trans_sents = [re.sub(r'\\)]\n",
+    "trans_sents = [re.sub(r'(\\w)([?.!,\"/()])', r'\\1 \\2', line) for line in trans_sents]\n",
+    "trans_sents = [re.sub(r'([?.!,\"/()])(\\w)', r'\\1 \\2', line) for line in trans_sents]\n",
+    "trans_refs = [line.split(' ') for line in trans_sents]\n",
+    "\n",
     "num_trans = len(trans_sents)\n",
     "\n",
-    "af_refs = [[re.sub(r'\\s+([?.!,\"])', r'\\1', line).split(' ')] for line in af_sents]\n",
+    "af_sents = [re.sub(r'(\\w)([?.!,\"/()])', r'\\1 \\2', line) for line in af_sents]\n",
+    "af_sents = [re.sub(r'([?.!,\"/()])(\\w)', r'\\1 \\2', line) for line in af_sents]\n",
+    "af_refs = [[line.rstrip('\\r').split(' ')] for line in af_sents]\n",
     "\n",
-    "bleu_1 = corpus_bleu(af_refs[:num_trans], trans_sents, weights=(1, 0, 0, 0))*100\n",
-    "bleu_4 = corpus_bleu(af_refs[:num_trans], trans_sents)*100\n",
+    "# calculate bleu score\n",
+    "bleu_1 = corpus_bleu(af_refs[:num_trans], trans_refs, weights=(1, 0, 0, 0))*100\n",
+    "bleu_4 = corpus_bleu(af_refs[:num_trans], trans_refs)*100\n",
     "\n",
     "print('BLEU1: %.3f' %bleu_1)\n",
     "print('BLEU4: %.3f' %bleu_4)\n",
@@ -276,48 +287,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2880"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "num_trans"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Home > Directories > Glossary: U\r\n",
-      "[['Tuisblad', '>', 'Gidse', '>', 'Woordelys:', 'U\\r']]\n",
-      "['Tuisblad&gt;', 'Gidse&gt;', 'Woordelys:', 'U']\n",
-      "7.813508425061864e-230\n"
+      "The Western Cape ARV programme aims to establish 36 accredited ARV treatment sites by March 2005 and to provide daily ARV treatment to 6,000 patients (estimated to be half of those in need of treatment) by March 2005.\r\n",
+      "[['Die', 'Wes-Kaapse', 'TRV-program', 'wil', 'teen', 'Maart', '2005', '36', 'geakkrediteerde', 'TRV-behandelingspunte', 'op', 'die', 'been', 'hê', 'en', 'daagliks', 'TRV-behandeling', 'aan', '6', ',', '000', 'pasiënte', 'verskaf', '.', '(Daar', 'word', 'beraam', 'dat', 'dit', 'die', 'helfte', 'van', 'die', 'mense', 'is', 'wat', 'behandeling', 'nodig', 'het', '.)']]\n",
+      "['Die', 'Wes-Kaapse', 'ARV-program', 'beoog', 'om', 'teen', 'Maart', '2005', '36', 'geakkrediteerde', 'ARV-behandelingsterreine', 'te', 'vestig', 'en', 'teen', 'Maart', '2005', 'elke', 'maand', '6', '000', 'pasiënte', '(na', 'raming', 'die', 'helfte', 'van', 'diegene', 'wat', 'behandeling', 'benodig),', 'te', 'voorsien', '.']\n",
+      "6.197644091669366e-230\n"
      ]
     }
    ],
    "source": [
-    "n = 68\n",
+    "n = 113\n",
     "\n",
     "print(en_sents[n])\n",
     "print(af_refs[n])\n",
-    "print(trans_sents[n])\n",
+    "print(trans_refs[n])\n",
     "print(sentence_bleu(af_refs[n], trans_sents[n])*100)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
